# QtRAR

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  qtrar.pro
patch/: 0001-Add-RARSetPasswordW.patch  0001-Support-Unicode-password-and-comment.patch  0002-WChar-Comment.patch
src/: CMakeLists.txt  qtrar.cpp  qtrar.h  qtrar.pri  qtrar.pro  qtrar_global.h  qtrarfile.cpp  qtrarfile.h  qtrarfileinfo.cpp  qtrarfileinfo.h  src.pri  src.pro
src/unrar/: dll.cpp  dll.hpp  unrar.pri  unrar.pro
test/: CMakeLists.txt  qtrar_test.cpp  qtrarfile_test.cpp  qtrartest.cpp  test.pri  test.pro  testqtrar.cpp  testqtrar.h  testqtrarfile.cpp  testqtrarfile.h
test/assets/: comment-utf8.rar  comment.rar  image.rar  multiple-with-utf8.rar  multiple.rar  password-data.rar  password-header.rar  password-utf8.rar  password.rar  single.rar
